HUSTLE-39: Nav bar changes; Portfolio and Events section layout changes

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 </head>
 <body class="hero-background">
 
+    <!-- Scroll Progress Bar -->
+    <div class="scroll-progress-bar"></div>
+
     <header class="main-header">
         <nav class="left-nav">
             <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="portfolio.html">PORTFOLIO</a></li>
+                <li><a href="events.html">EVENTS</a></li>
                 <li><a href="services.html">SERVICES</a></li>
             </ul>
         </nav>
@@ -24,18 +27,9 @@
         </div>
         <nav class="right-nav">
             <ul>
-                <li class="dropdown">
-                    <a href="#" class="dropbtn">PORTFOLIO +</a>
-                    <div class="dropdown-content">
-                        <a href="public-events.html">Public Events</a>
-                        <a href="private-events.html">Private Events</a>
-                        <a href="portraits.html">Portraits</a>
-                        <a href="landscapes-nature.html">Landscapes & Nature</a>
-                        <a href="architecture-cityscapes.html">Architecture & Cityscapes</a>
-                    </div>
-                </li>
-                <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="about.html">ABOUT</a></li>
                 <li><a href="blog-preview.html">BLOG</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
         <!-- Mobile Hamburger Menu Button -->
@@ -50,21 +44,12 @@
     <div class="mobile-overlay-menu">
         <nav class="mobile-nav">
             <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="portfolio.html">PORTFOLIO</a></li>
+                <li><a href="events.html">EVENTS</a></li>
                 <li><a href="services.html">SERVICES</a></li>
-                <li class="mobile-dropdown">
-                    <a href="#" class="mobile-dropbtn">PORTFOLIO</a>
-                    <ul class="mobile-dropdown-content">
-                        <li><a href="public-events.html">Public Events</a></li>
-                        <li><a href="private-events.html">Private Events</a></li>
-                        <li><a href="portraits.html">Portraits</a></li>
-                        <li><a href="landscapes-nature.html">Landscapes & Nature</a></li>
-                        <li><a href="architecture-cityscapes.html">Architecture & Cityscapes</a></li>
-                    </ul>
-                </li>
-                <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="about.html">ABOUT</a></li>
                 <li><a href="blog-preview.html">BLOG</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
     </div>
@@ -101,6 +86,65 @@
             </div>
         </div>
     </section>
+
+    <!-- Gallery Section -->
+    <section class="gallery-section">
+        <div class="gallery-container">
+            <p class="gallery-subtitle">PORTFOLIO</p>
+            <h2 class="gallery-headline">Selected Works</h2>
+            <div class="gallery-grid">
+                <div class="gallery-item parallax-image">
+                    <img src="assets/images/website_use/original_carousel_images/ilce-7rm4a-(778)_optimized.webp" alt="Photography work 1">
+                </div>
+                <div class="gallery-item parallax-image">
+                    <img src="assets/images/website_use/original_carousel_images/ilce-7rm4a-(814)_optimized.webp" alt="Photography work 2">
+                </div>
+                <div class="gallery-item parallax-image">
+                    <img src="assets/images/website_use/original_carousel_images/ilce-7rm4a-(666)_optimized.webp" alt="Photography work 3">
+                </div>
+                <div class="gallery-item parallax-image">
+                    <img src="assets/images/website_use/original_carousel_images/ilce-7rm4a-(822)_optimized.webp" alt="Photography work 4">
+                </div>
+                <div class="gallery-item parallax-image">
+                    <img src="assets/images/website_use/original_carousel_images/dsc02424_optimized.webp" alt="Photography work 5">
+                </div>
+                <div class="gallery-item parallax-image">
+                    <img src="assets/images/website_use/pxl_20210904_212916422.webp" alt="Photography work 6">
+                </div>
+            </div>
+            <a href="public-events.html" class="gallery-view-more-btn">VIEW FULL PORTFOLIO</a>
+        </div>
+    </section>
+
+    <!-- Testimonials Section -->
+    <section class="testimonials-section">
+        <div class="testimonials-container">
+            <p class="testimonials-subtitle">TESTIMONIALS</p>
+            <h2 class="testimonials-headline">What Clients Say</h2>
+            <div class="testimonials-grid">
+                <div class="testimonial-card parallax-card">
+                    <p class="testimonial-quote">"Ashay captured our wedding day with such artistry and emotion. Every photo tells a story, and we couldn't be happier with the results."</p>
+                    <p class="testimonial-author">— Sarah & Michael</p>
+                </div>
+                <div class="testimonial-card parallax-card">
+                    <p class="testimonial-quote">"The attention to detail and the ability to capture candid moments made our family portraits truly special. Highly recommend!"</p>
+                    <p class="testimonial-author">— The Johnson Family</p>
+                </div>
+                <div class="testimonial-card parallax-card">
+                    <p class="testimonial-quote">"Working with Motions and Emotions was a wonderful experience. The photos from our corporate event exceeded all expectations."</p>
+                    <p class="testimonial-author">— David Chen, Tech Corp</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="main-footer">
+        <div class="footer-content">
+            <a href="https://instagram.com" target="_blank" rel="noopener noreferrer" class="footer-instagram">Instagram</a>
+        </div>
+        <p class="footer-copyright">&copy; 2025 Motions and Emotions by Ashay Parikh</p>
+    </footer>
 
     <script src="js/script.js"></script>
 </body>
