--- a/services.html
+++ b/services.html
@@ -12,8 +12,8 @@
     <header class="main-header fixed-header">
         <nav class="left-nav">
             <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="portfolio.html">PORTFOLIO</a></li>
+                <li><a href="events.html">EVENTS</a></li>
                 <li><a href="services.html">SERVICES</a></li>
             </ul>
         </nav>
@@ -24,18 +24,9 @@
         </div>
         <nav class="right-nav">
             <ul>
-                <li class="dropdown">
-                    <a href="#" class="dropbtn">PORTFOLIO +</a>
-                    <div class="dropdown-content">
-                        <a href="public-events.html">Public Events</a>
-                        <a href="private-events.html">Private Events</a>
-                        <a href="portraits.html">Portraits</a>
-                        <a href="landscapes-nature.html">Landscapes & Nature</a>
-                        <a href="architecture-cityscapes.html">Architecture & Cityscapes</a>
-                    </div>
-                </li>
-                <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="about.html">ABOUT</a></li>
                 <li><a href="blog-preview.html">BLOG</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
         <!-- Mobile Hamburger Menu Button -->
@@ -50,21 +41,12 @@
     <div class="mobile-overlay-menu">
         <nav class="mobile-nav">
             <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="portfolio.html">PORTFOLIO</a></li>
+                <li><a href="events.html">EVENTS</a></li>
                 <li><a href="services.html">SERVICES</a></li>
-                <li class="mobile-dropdown">
-                    <a href="#" class="mobile-dropbtn">PORTFOLIO</a>
-                    <ul class="mobile-dropdown-content">
-                        <li><a href="public-events.html">Public Events</a></li>
-                        <li><a href="private-events.html">Private Events</a></li>
-                        <li><a href="portraits.html">Portraits</a></li>
-                        <li><a href="landscapes-nature.html">Landscapes & Nature</a></li>
-                        <li><a href="architecture-cityscapes.html">Architecture & Cityscapes</a></li>
-                    </ul>
-                </li>
-                <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="about.html">ABOUT</a></li>
                 <li><a href="blog-preview.html">BLOG</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
     </div>
@@ -80,7 +62,7 @@
                     <p>Tailored sessions designed to bring out the best in you and your loved ones. From timeless headshots to vibrant family memories, we craft images that speak volumes. Focus on genuine emotion and personalized artistic vision.</p>
                     <a href="#" class="learn-more-btn">Learn More &rarr;</a>
                 </div>
-                <div class="service-image-placeholder"></div>
+                <div class="service-image-placeholder" style="background-image: url('assets/images/portfolio_use/engagement_webp/ilce-7rm4a-(778).webp');"></div>
             </section>
 
             <section class="service-section">
@@ -90,7 +72,7 @@
                     <p>Experience the ease of professional photography in the familiar comfort of your home. Perfect for newborns, intimate family moments, or showcasing your personal brand in a relaxed, authentic setting.</p>
                     <a href="#" class="learn-more-btn">Learn More &rarr;</a>
                 </div>
-                <div class="service-image-placeholder"></div>
+                <div class="service-image-placeholder" style="background-image: url('assets/images/website_use/blogs/in-home-shoot.webp');"></div>
             </section>
 
             <section class="service-section">
@@ -100,7 +82,7 @@
                     <p>From grand weddings to intimate gatherings, ensure every precious moment of your event is beautifully preserved. Discreet, comprehensive coverage allows you to relive your special day through stunning, candid imagery.</p>
                     <a href="#" class="learn-more-btn">Learn More &rarr;</a>
                 </div>
-                <div class="service-image-placeholder"></div>
+                <div class="service-image-placeholder" style="background-image: url('assets/images/website_use/blogs/proposal.webp');"></div>
             </section>
 
             <section class="service-section">
@@ -110,7 +92,7 @@
                     <p>Don't let your beautiful photos live only on screen. We offer premium printing services, from stunning large-format prints to custom albums, ensuring your cherished memories become lasting physical heirlooms.</p>
                     <a href="#" class="learn-more-btn">Learn More &rarr;</a>
                 </div>
-                <div class="service-image-placeholder"></div>
+                <div class="service-image-placeholder" style="background-image: url('assets/images/website_use/blogs/Chicago-Henge-2.webp');"></div>
             </section>
 
             <section class="service-section">
@@ -120,7 +102,7 @@
                     <p>Explore and acquire exclusive pieces from my personal portfolio. These fine art prints are carefully selected works, available to adorn your space with unique perspectives and emotional depth, reflecting my artistic journey.</p>
                     <a href="#" class="learn-more-btn">Learn More &rarr;</a>
                 </div>
-                <div class="service-image-placeholder"></div>
+                <div class="service-image-placeholder" style="background-image: url('assets/images/website_use/blogs/moonrise.webp');"></div>
             </section>
 
         </div>
